# dafny-evm-compiler

./: .gitignore  .gitmodules  ERC20_VERIFICATION_PLAN.md  ERC20_VERIFIED_STATUS.md  HARDHAT_TESTING.md  README.md  cli.py  compile_for_foundry.py  compile_for_hardhat.py  pyproject.toml  test_constructor_params.py  test_nested_mappings.py  test_parser_hang.py
docs/: README.md
examples/: Counter.dfy  ERC20Verified.dfy  MappingChecker.dfy  MyToken.dfy  PublicVarsOnly.dfy  PublicVarsTest.dfy  SimpleTest.dfy  _AdvancedToken.dfy  _AdvancedVault.dfy  _ComprehensiveExample.dfy  _DynamicArray.dfy  _FullyVerifiedToken.dfy  _ModernWallet.dfy  _ModifierExample.dfy  _MultiReturn.dfy  _StructExample.dfy  _VerifiableToken.dfy  _VerifiedToken.dfy  _VerifiedTokenSimple.dfy
foundry-tests/: README.md  foundry.toml
foundry-tests/cache/: solidity-files-cache.json  test-failures
foundry-tests/test/: .Counter.t.sol.swp  Counter.t.sol  MyToken.t.sol  SimpleToken.t.sol
hardhat-tests/: hardhat.config.js  package.json
hardhat-tests/test/: ERC20Verified.test.js  MappingChecker.test.js  MyToken.test.js  SimpleToken.test.js
src/: __init__.py  dafny_compiler.py  dafny_prelude.dfy
src/parser/: dafny_ast.py  (+1 more)
tests/: README.md  test_abi_generation.py  test_advanced_features.py  test_compiler.py  test_if_expressions.py  test_integration.py  test_inter_contract_calls.py  test_interfaces.py  test_library_imports.py  test_parser_features.py  test_phase2_features.py  test_phase3_features.py  test_phase4_features.py  test_phase6_features.py  test_verification.py
tools/: analyze.py  deploy.py
(+73 files in other folders)
