[project]
name = "dafny-evm-compiler"
version = "0.1.0"
description = "Compile formally verified Dafny smart contracts to EVM bytecode"
requires-python = ">=3.8"
dependencies = [
    "py-solc-x>=1.1.1",
    "web3>=6.0.0",
]

[project.scripts]
dafny-evm = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
